--- a/package.json
+++ b/package.json
@@ -23,13 +23,23 @@
     "postpack": "pinst --enable"
   },
   "dependencies": {
+    "axios": "^1.1.3",
+    "dotenv-cra": "^3.0.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-vue": "^9.6.0",
+    "primeflex": "^3.2.1",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.18.0",
     "vue": "^3.2.41"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
+    "@sapphire/eslint-config": "^4.3.8",
+    "@sapphire/prettier-config": "^1.4.4",
+    "@sapphire/ts-config": "^3.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.26.0",
@@ -76,6 +86,5 @@
     "ansi-regex": "^5.0.1",
     "minimist": "^1.2.7"
   },
-  "prettier": "@sapphire/prettier-config",
   "packageManager": "yarn@3.2.4"
 }
