--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.18.0",
+    "sass": "^1.56.0",
     "vue": "^3.2.41"
   },
   "devDependencies": {
