--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
+    "bootstrap-icons-vue": "^1.8.1",
+    "bootstrap-vue-3": "^0.5.1",
     "dotenv-cra": "^3.0.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.6.0",
