--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postpack": "pinst --enable"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
@@ -31,11 +32,9 @@
     "dotenv-cra": "^3.0.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.6.0",
-    "primeflex": "^3.2.1",
-    "primeicons": "^6.0.1",
-    "primevue": "^3.18.0",
     "sass": "^1.56.0",
-    "vue": "^3.2.41"
+    "vue": "^3.2.41",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
@@ -90,6 +89,11 @@
   "resolutions": {
     "ansi-regex": "^5.0.1",
     "minimist": "^1.2.7"
+  },
+  "paths": {
+    "@*": [
+      "src/*"
+    ]
   },
   "packageManager": "yarn@3.2.4"
 }
