--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "@PGP04",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint src tests --ext ts --fix",
-    "format": "prettier --write {src,tests}/**/*.ts",
+    "lint": "eslint src --ext ts --fix",
+    "format": "prettier --write {src}/**/*.ts",
     "docs": "typedoc",
     "test": "jest",
     "test:watch": "jest --watch",
