Login e registo working

--- a/package.json
+++ b/package.json
@@ -33,9 +33,13 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.6.0",
     "firebase": "^9.17.2",
+    "primeflex": "^3.3.0",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.24.0",
     "sass": "^1.56.0",
     "vue": "^3.2.41",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
