--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "eslint-plugin-vue": "^9.6.0",
     "sass": "^1.56.0",
     "vue": "^3.2.41",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
