--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "bootstrap-icons-vue": "^1.8.1",
+    "bootstrap-vue": "^2.23.1",
     "bootstrap-vue-3": "^0.5.1",
     "dotenv-cra": "^3.0.2",
     "eslint-plugin-import": "^2.26.0",
@@ -35,7 +36,8 @@
     "mdb-vue-ui-kit": "^3.2.0",
     "sass": "^1.56.0",
     "vue": "^3.2.41",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
