--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
@@ -35,6 +37,7 @@
     "eslint-plugin-vue": "^9.6.0",
     "mdb-vue-ui-kit": "^3.2.0",
     "sass": "^1.56.0",
+    "stripe": "^11.16.0",
     "vue": "^3.2.41",
     "vue-router": "4",
     "vue-sweetalert2": "^5.0.5"
