--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.6.0",
     "firebase": "^9.17.2",
+    "js-cookie": "^3.0.1",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.24.0",
@@ -47,6 +48,7 @@
     "@sapphire/eslint-config": "^4.3.8",
     "@sapphire/prettier-config": "^1.4.4",
     "@sapphire/ts-config": "^3.3.4",
+    "@types/js-cookie": "^3",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "@vitejs/plugin-vue": "^3.2.0",
