--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-vue": "^9.6.0",
     "mdb-vue-ui-kit": "^3.2.0",
     "sass": "^1.56.0",
+    "sweetalert2": "^11.7.3",
     "vue": "^3.2.41",
     "vue-router": "4",
     "vue-sweetalert2": "^5.0.5"
