--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@stripe/stripe-js": "^1.52.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
@@ -33,14 +34,12 @@
     "dotenv-cra": "^3.0.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.6.0",
-    "mdb-vue-ui-kit": "^3.2.0",
-
     "firebase": "^9.17.2",
     "js-cookie": "^3.0.1",
+    "mdb-vue-ui-kit": "^3.2.0",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.24.0",
-
     "sass": "^1.56.0",
     "sweetalert2": "^11.7.3",
     "vue": "^3.2.41",
