--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
     "dotenv-cra": "^3.0.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.6.0",
-    "mdb-vue-ui-kit": "^3.2.0",
     "firebase": "^9.17.2",
     "js-cookie": "^3.0.1",
+    "mdb-vue-ui-kit": "^3.2.0",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.24.0",
     "sass": "^1.56.0",
     "stripe": "^11.18.0",
+    "sweetalert2": "^11.7.3",
     "vue": "^3.2.41",
     "vue-router": "4",
     "vue-sweetalert2": "^5.0.5",
