--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "firebase": "^9.17.2",
     "js-cookie": "^3.0.1",
     "mdb-vue-ui-kit": "^3.2.0",
+    "mdbvue": "^6.7.3",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.24.0",
     "sass": "^1.56.0",
     "sweetalert2": "^11.7.3",
     "vue": "^3.2.41",
+    "vue-carousel": "^0.18.0",
     "vue-router": "4",
     "vue-sweetalert2": "^5.0.5",
     "vuex": "^4.0.2"
