--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postpack": "pinst --enable"
   },
   "dependencies": {
+    "@mikro-orm/cli": "^5.6.16",
     "@popperjs/core": "^2.11.6",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
@@ -32,7 +33,7 @@
     "dotenv-cra": "^3.0.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.6.0",
-    "firebase": "^9.17.2",
+    "firebase": "^9.19.1",
     "js-cookie": "^3.0.1",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
@@ -40,7 +41,7 @@
     "sass": "^1.56.0",
     "vue": "^3.2.41",
     "vue-router": "4",
-    "vuex": "^4.0.2"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
