--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,20 @@
 {
-	"extends": "@sapphire"
+    "root": true,
+    "parser": "vue-eslint-parser",
+    "parserOptions": {
+        "parser": "@typescript-eslint/parser"
+    },
+    "extends": [
+        "plugin:vue/strongly-recommended",
+        "eslint:recommended",
+        "@vue/typescript/recommended",
+        "prettier"
+    ],
+    "plugins": ["@typescript-eslint", "prettier"],
+    "rules": {
+		"quotes": ["error", "single"],
+        "prettier/prettier": "error",
+        // not needed for vue 3
+        "vue/no-multiple-template-root": "off"
+    }
 }
