--- a/package.json
+++ b/package.json
@@ -30,6 +30,13 @@
     "bootstrap-icons-vue": "^1.8.1",
     "bootstrap-vue-3": "^0.5.1",
     "dotenv-cra": "^3.0.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-vue": "^9.6.0",
+    "firebase": "^9.19.1",
+    "js-cookie": "^3.0.1",
+    "primeflex": "^3.3.0",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.24.0",
     "sass": "^1.56.0",
     "vue": "^3.2.41",
     "vue-router": "4",
