--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-VITE_API_URL=https://api.fcul.com
+VITE_API_URL='http://localhost:3000'
+VITE_FIREBASE_API_KEY: 'AIzaSyCNHKruNzyveATq_SXnKR_iT5s3wIPIBwg'
+VITE_FIREBASE_AUTH_DOMAIN: 'hive-town-auth.firebaseapp.com'
+VITE_FIREBASE_PROJECT_ID: 'hive-town-auth'
+VITE_FIREBASE_STORAGE_BUCKET: 'hive-town-auth.appspot.com'
+VITE_FIREBASE_MESSAGING_SENDER_ID: '984328749354'
+VITE_FIREBASE_APP_ID: '1:984328749354:web:cf4ad1a3c0e4efd2821e53'
