--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "dotenv-cra": "^3.0.2",
     "firebase": "^9.21.0",
     "js-cookie": "^3.0.5",
+    "mdb-vue-ui-kit": "^4.0.0",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.29.0",
     "sass": "^1.56.0",
     "sweetalert2": "^11.7.3",
     "vue": "^3.2.41",
+    "vue-carousel": "^0.18.0",
     "vue-router": "4",
     "vuex": "^4.1.0"
   },
