--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "sweetalert2": "^11.7.3",
     "vue": "^3.2.41",
     "vue-carousel": "^0.18.0",
-    "vue-router": "4",
+    "vue-router": "^4.2.1",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
