--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "primeicons": "^6.0.1",
     "primevue": "^3.29.0",
     "sass": "^1.56.0",
+    "vee-validate": "^4.9.5",
     "vue": "^3.2.41",
     "vue-router": "4",
     "vue3-simple-typeahead": "^1.0.11",
