--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "primevue": "^3.29.0",
     "sass": "^1.56.0",
     "vue": "^3.2.41",
-    "vue-router": "4",
+    "vue-router": "^4.2.1",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
