--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"bootstrap-icons": "^1.10.3",
 		"bootstrap-icons-vue": "^1.8.1",
 		"bootstrap-vue-3": "^0.5.1",
+		"chart.js": "^4.3.0",
 		"dotenv-cra": "^3.0.2",
 		"firebase": "^9.21.0",
 		"js-cookie": "^3.0.5",
@@ -37,6 +38,7 @@
 		"primevue": "^3.29.0",
 		"sass": "^1.56.0",
 		"vue": "^3.2.41",
+		"vue-chartjs": "^5.2.0",
 		"vue-router": "4",
 		"vue-slick-carousel": "^1.0.6",
 		"vuex": "^4.1.0"
