--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -1,13 +1,17 @@
 name: Build and Push Docker Image to Docker Hub 
 
 on:
+  workflow_dispatch:
+  release:
+    types: [created]
   push:
-    branches: ['main']
+    branches:
+      - 'main'
     tags:
-        - 'v*'
+      - 'v*'
   pull_request:
     branches:
-        - 'main'
+      - 'main'
 
 env:
   # Use docker.io for Docker Hub if empty
