--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "docker:push": "docker push hivetown/frontend"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@popperjs/core": "^2.11.6",
+    "@studiometa/vue-mapbox-gl": "^2.1.1",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
@@ -35,6 +37,7 @@
     "dotenv-cra": "^3.0.2",
     "firebase": "^9.21.0",
     "js-cookie": "^3.0.5",
+    "mapbox-gl": "^2.15.0",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.29.0",
@@ -52,6 +55,7 @@
     "@sapphire/ts-config": "^3.3.4",
     "@types/jest": "^29.5.1",
     "@types/js-cookie": "^3.0.3",
+    "@types/mapbox-gl": "^2.7.11",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "@vitejs/plugin-vue": "^3.2.0",
