--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv-cra": "^3.0.2",
     "firebase": "^9.21.0",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "mdb-vue-ui-kit": "^4.0.0",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
@@ -58,6 +59,7 @@
     "@sapphire/ts-config": "^3.3.4",
     "@types/jest": "^29.5.1",
     "@types/js-cookie": "^3.0.3",
+    "@types/lodash": "^4",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "@vitejs/plugin-vue": "^3.2.0",
